change to fast feedback

--- a/trivia.html
+++ b/trivia.html
@@ -17,6 +17,7 @@
             <button class="option-btn" id="option3" title="Option 3">Option 3</button>
             <button class="option-btn" id="option4" title="Option 4">Option 4</button>
         </div>
+        <div id="feedback"></div>
         <button id="pronounce-btn">Pronounce</button>
         <button id="next-btn">Next Question</button>
         <div id="strike">Strikes: 0</div>
