--- a/trivia.html
+++ b/trivia.html
@@ -20,8 +20,8 @@
         <div id="feedback"></div>
         <button id="pronounce-btn">Pronounce</button>
         <button id="next-btn">Next Question</button>
-        <div id="strike">Strikes: 0</div>
-        <div id="timer"><span id="timer-value">10</span></div>
+        <div id="Streak">Streak: 0</div>
+        <div id="timer"><span id="timer-value">15</span></div>
         
     </body>
 </html>
